Revert "[MODORDERS-899] - changed collect(Collectors.toList()) to toList()"
This reverts commit 63766612a9070ea06143851191bde4da35b280a8.