@@ -1,5 +1,6 @@
 package org.folio.helper;
 
+import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.CollectionUtils.isEmpty;
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import static org.folio.helper.BaseHelper.MAX_REPEAT_ON_FAILURE;
@@ -490,12 +491,12 @@ public class PurchaseOrderHelper {
   public Future<List<Error>> validateOrderPoLines(CompositePurchaseOrder compositeOrder, RequestContext requestContext) {
     List<Future<List<Error>>> poLinesErrors = compositeOrder.getCompositePoLines().stream()
       .map(compositePoLine -> compositePoLineValidationService.validatePoLine(compositePoLine, requestContext))
-      .toList();
+      .collect(toList());
 
     return collectResultsOnSuccess(poLinesErrors).map(
       lists -> lists.stream()
         .flatMap(Collection::stream)
-        .toList());
+        .collect(toList()));
   }
 
   /**
@@ -552,11 +553,11 @@ public class PurchaseOrderHelper {
 
   private Future<String> adjustPrefixAndSuffix(String poNumber, CompositePurchaseOrder compPO) {
     List<String> valuesToConcat = Arrays.asList(compPO.getPoNumberPrefix(), poNumber, compPO.getPoNumberSuffix());
-    StringBuilder result = new StringBuilder();
+    String result = "";
     for (String value: valuesToConcat) {
-      result.append(value == null ? "" : value);
+      result += value == null ? "" : value;
     }
-    return Future.succeededFuture(result.toString());
+    return Future.succeededFuture(result);
   }
 
   private Future<List<Error>> validateVendor(CompositePurchaseOrder compPO, RequestContext requestContext) {
@@ -685,7 +686,7 @@ public class PurchaseOrderHelper {
       compPO.getCompositePoLines()
             .stream()
             .map(compositePoLine -> purchaseOrderLineHelper.createPoLine(compositePoLine, compPO, requestContext))
-            .toList();
+            .collect(Collectors.toList());
     return collectResultsOnSuccess(futures);
   }
 
@@ -792,7 +793,7 @@ public class PurchaseOrderHelper {
           .stream()
           .filter(StringUtils::isNotBlank)
           .map(tag -> StringUtils.deleteWhitespace(tag).toLowerCase())
-          .toList();
+          .collect(toList());
 
         line.getTags().setTagList(processedTagList);
       }
@@ -831,7 +832,7 @@ public class PurchaseOrderHelper {
       List<CompositePoLine> clonedLines = poFromStorage.getCompositePoLines()
         .stream()
         .map(line -> JsonObject.mapFrom(line).mapTo(CompositePoLine.class))
-        .toList();
+        .collect(toList());
       clonedCompPO.setCompositePoLines(clonedLines);
     }
     if (compPO.getCloseReason() != null && REASON_CANCELLED.equals(compPO.getCloseReason().getReason())) {
@@ -845,7 +846,7 @@ public class PurchaseOrderHelper {
       List<CompositePoLine> clonedLines = poFromStorage.getCompositePoLines()
         .stream()
         .map(line -> JsonObject.mapFrom(line).mapTo(CompositePoLine.class))
-        .toList();
+        .collect(toList());
       compPO.setCompositePoLines(clonedLines);
     }
     compPO.getCompositePoLines().forEach(line -> {
@@ -867,7 +868,7 @@ public class PurchaseOrderHelper {
     List<Future<Void>> futures = compPO.getCompositePoLines()
       .stream()
       .map(compPOL -> purchaseOrderLineHelper.setTenantDefaultCreateInventoryValues(compPOL, tenantConfiguration))
-      .toList();
+      .collect(toList());
 
     return GenericCompositeFuture.join(futures)
       .mapEmpty();
@@ -883,12 +884,12 @@ public class PurchaseOrderHelper {
   private Future<Void> updateItemsInInventory(List<JsonObject> items, RequestContext requestContext) {
     return GenericCompositeFuture.join(items.stream()
       .map(item -> inventoryManager.updateItem(item, requestContext))
-      .toList())
+      .collect(toList()))
       .mapEmpty();
   }
 
   private List<CompositePoLine> getNonPackageLines(List<CompositePoLine> compositePoLines) {
-    return compositePoLines.stream().filter(line -> !line.getIsPackage()).toList();
+    return compositePoLines.stream().filter(line -> !line.getIsPackage()).collect(toList());
   }
 
   private boolean isUserDoesNotHaveDesiredPermission(AcqDesiredPermissions acqPerm, RequestContext requestContext) {
@@ -902,7 +903,7 @@ public class PurchaseOrderHelper {
   private static List<String> getProvidedPermissions(RequestContext requestContext) {
     return new JsonArray(requestContext.getHeaders().getOrDefault(OKAPI_HEADER_PERMISSIONS, EMPTY_ARRAY)).stream().
       map(Object::toString)
-      .toList();
+      .collect(Collectors.toList());
   }
 
   public static boolean isUserNotHaveApprovePermission(RequestContext requestContext) {
@@ -928,11 +929,11 @@ public class PurchaseOrderHelper {
     if (CollectionUtils.isEmpty(poLines)) {
       return Future.succeededFuture();
     }
-    List<String> poLineIds = poLines.stream().map(PoLine::getId).toList();
+    List<String> poLineIds = poLines.stream().map(PoLine::getId).collect(toList());
     return GenericCompositeFuture.join(
       StreamEx.ofSubLists(poLineIds, MAX_IDS_FOR_GET_RQ_15)
         .map(chunk -> VertxFutureRepeater.repeat(MAX_REPEAT_ON_FAILURE, () -> updateItemsStatus(chunk, currentStatus, newStatus, requestContext)))
-        .toList())
+        .collect(toList()))
       .mapEmpty();
   }
 
