@@ -1,5 +1,6 @@
 package org.folio.service.orders.lines.update.instance;
 
+import static java.util.stream.Collectors.toList;
 import static org.folio.service.inventory.InventoryManager.ID;
 import static org.folio.service.inventory.InventoryManager.ITEM_HOLDINGS_RECORD_ID;
 
@@ -112,7 +113,7 @@ public class WithHoldingOrderLineUpdateInstanceStrategy extends BaseOrderLineUpd
         List<Location> pieceHoldingIds = pieces
           .stream()
           .map(piece -> new Location().withHoldingId(piece.getHoldingId()).withLocationId(piece.getLocationId()))
-          .toList();
+          .collect(toList());
         List<Location> storageHoldingIds = holder.getStoragePoLine().getLocations();
 
         StreamEx.of(ListUtils.union(pieceHoldingIds, storageHoldingIds))
@@ -147,7 +148,7 @@ public class WithHoldingOrderLineUpdateInstanceStrategy extends BaseOrderLineUpd
           parameters.add(parameter);
           return null;
         }))
-      .toList())
+      .collect(toList()))
       .mapEmpty()
       .map(v -> {
         if (CollectionUtils.isNotEmpty(parameters)) {
@@ -163,7 +164,7 @@ public class WithHoldingOrderLineUpdateInstanceStrategy extends BaseOrderLineUpd
         locations.stream().map(Location::getHoldingId))
       .distinct()
       .filter(Objects::nonNull)
-      .toList();
+      .collect(toList());
   }
 
 }
